fazendo a aba obejtivos e mexendo no css

--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -33,7 +33,7 @@ header nav ul li a:hover{
     border: 2px solid #ccc;
 }
 header #logo{
-    color:blue;
+    color: white
 }
 .banner #image{
     width: 100%;
