--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -457,3 +457,40 @@ footer {
   margin-top: 30px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
+/*css publico*/
+#publico-alvo {
+  background: linear-gradient(to bottom right, #e6f2ff, #ffffff);
+  padding: 60px 30px;
+  border-radius: 16px;
+  max-width: 1000px;
+  margin: 60px auto;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+#publico-alvo:hover {
+  transform: translateY(-5px);
+}
+
+#publico-alvo h2 {
+  font-size: 2.2rem;
+  color: #004a99;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+
+#publico-alvo p {
+  font-size: 1.2rem;
+  color: #333;
+  margin-bottom: 20px;
+  line-height: 1.7;
+}
+
+#publico-alvo img {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  border-radius: 12px;
+  margin-top: 30px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
